h1ga soz yozildi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hello azizbek</h1>
+    <h1>hello azizbek2</h1>
+    <h1>hello azizbek3</h1>
+    <h1>hello azizbek4</h1>
+    <h1>hello azizbek5</h1>
+    <h1>hello azizbek6</h1>
 </body>
 </html>
