--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h1>hello azizbek4</h1>
     <h1>hello azizbek5</h1>
     <h1>hello azizbek6</h1>
+    <h1>hello azizbek6</h1>
+    <h1>hello azizbek6</h1>
+    <h1>hello azizbek6</h1>
 </body>
 </html>
